# dirtocgen

./: Makefile  README.md  pyproject.toml
dirtocgen/: __main__.py  content_path.py  usecase.py
tests/: helper.py  test_content_path.py  test_helper.py  test_usecase.py
tests/cases/insert_root_toc/: expect.txt  setup.txt
tests/cases/insert_root_toc/input/: README.md
tests/cases/insert_root_toc_and_create_child_index_doc/expect/: README.md
tests/cases/insert_root_toc_and_create_child_index_doc/expect/dir1/: README.md
tests/cases/insert_root_toc_and_create_child_index_doc/input/: README.md
tests/cases/update_root_toc/expect/: README.md
tests/cases/update_root_toc/input/: .doc2.md  README.md  doc1.md
