[tool.poetry]
name = "dirtocgen"
version = "0.1.0"
description = "Table of contents generator"
authors = ["Mamoru Miura <mamo3gr@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.1"
pyproject-flake8 = "^6.0.0.post1"
coverage = "^7.2.1"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-exclude = [".venv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
